# rust-dylib-sandbox

./: Cargo.toml  README.md  build.ps1  build.sh
app/: Cargo.toml
app/src/: main.rs
plugin-demo/: Cargo.toml
plugin-demo/src/: lib.rs  methods.rs
plugin-demo/src/tests/: methods.rs
plugin-model/: Cargo.toml
plugin-model/src/: convert_to_plugin.rs  demo_plugin.rs  lib.rs  models.rs
plugin-system/: Cargo.toml
plugin-system/src/: lib.rs  plugins.rs  read_dirs.rs
plugin-system/src/tests/: mod.rs  plugins_tests.rs  read_dirs_tests.rs
