[package]
name = "plugin-system"
version = "0.1.0"
authors = ["nejat <nejatoz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libloading = "0.6"

[dev-dependencies]
# ensures plug is compiled for tests
plugin-demo = { path = "../plugin-demo" }
plugin-model = { path = "../plugin-model" }
